Making more progress but docker compose will need to fix the mongo db name
