# src/models/deleteResult.js
@@ -1,0 +1,6 @@
+export default class DeleteResult{
+
+    constructor(successful){
+        this.successful = successful;
+    }
+}
